--- a/style.css
+++ b/style.css
@@ -1,307 +1,323 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	overflow: hidden;
 }
 
 button {
-    box-sizing: border-box;
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background-color: maroon;
-    border: 2px solid black;
-    text-transform: uppercase;
-    overflow: hidden;
-    cursor: pointer;
-
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	border-radius: 15%;
+	padding: 2px 4px;
+	font-size: 10px;
+	background-color: maroon;
+	border: 1px solid black;
+	text-transform: uppercase;
+	overflow: hidden;
+	cursor: pointer;
+}
+button:hover ~ section > h1,
+button:hover ~ * {
+	animation-play-state: paused;
+}
+button:hover {
+	background-color: grey;
 }
 
 section {
-    position: absolute;
-    width: 100%;
-    height: 10vh;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255, 0.418);
-    box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
-    overflow: hidden;
-    z-index: 3;
+	position: absolute;
+	width: 100%;
+	height: 10vh;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: rgba(255, 255, 255, 0.418);
+	box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+	overflow: hidden;
+	z-index: 3;
 }
 
 h1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    transform: translate(100%, 0);
-    text-align: center;
-    font-size: 4vw;
-    text-transform: uppercase;
-    line-height: 10vh;
-    font-family: 'Righteous',
-        cursive, sans-serif;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	transform: translate(100%, 0);
+	text-align: center;
+	font-size: 4vw;
+	text-transform: uppercase;
+	line-height: 10vh;
+	font-family: "Righteous", cursive, sans-serif;
 
-    animation: text 15s linear infinite;
-    color: black;
-}
-
-button:hover~section>h1,
-button:hover~* {
-    animation-play-state: paused;
+	animation: text 15s linear infinite;
+	color: black;
 }
 
 h1:nth-child(2) {
-    animation-delay: 7.5s;
+	animation-delay: 7.5s;
 }
 
 .sky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #777;
-    animation: sky 15s infinite linear;
-    z-index: -2;
-
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: #777;
+	animation: sky 15s infinite linear;
+	z-index: -2;
 }
 
 .moon {
-    position: fixed;
-    bottom: 20%;
-    left: 0%;
-    transform: translate(50%, -50%);
-    width: 15vh;
-    height: 15vh;
-    background-color: transparent;
-    border-radius: 50%;
-    box-shadow: -20px 12px 0px 0px #98A682;
-    animation: moon 15s infinite linear;
-    z-index: -1;
+	position: fixed;
+	bottom: 20%;
+	left: 0%;
+	transform: translate(50%, -50%);
+	width: 15vh;
+	height: 15vh;
+	background-color: transparent;
+	border-radius: 50%;
+	box-shadow: -20px 12px 0px 0px #98a682;
+	animation: moon 15s infinite linear;
+	z-index: -1;
 }
 
 .forest {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    min-width: 50vh;
-    height: 70vh;
-    background-image: url(forest.png);
-    background-repeat: repeat-x;
-    background-size: contain;
-    background-position: bottom;
-    z-index: 1;
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	min-width: 50vh;
+	height: 70vh;
+	background-image: url(./img/forest.png);
+	background-repeat: repeat-x;
+	background-size: contain;
+	background-position: bottom;
+	z-index: 1;
 }
 
 .star {
-    position: fixed;
-    top: 10vw;
-    left: 10vh;
-    width: 5vh;
-    height: 5vh;
-    z-index: 2;
-    background-image: url(star.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    opacity: 0;
-    z-index: 1;
-    animation: star 15s linear infinite;
-
+	position: fixed;
+	top: 10vw;
+	left: 10vh;
+	width: 5vh;
+	height: 5vh;
+	z-index: 2;
+	background-image: url(./img/star.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	opacity: 0;
+	z-index: 1;
+	animation: star 15s linear infinite;
 }
 
 .hedgehog {
-    position: fixed;
-    left: 100%;
-    bottom: 0;
-    width: 10%;
-    height: 5vw;
-    background-image: url(hedgehog.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    transform: scaleX(-1);
-    z-index: 2;
-    animation: hedgehog 15s linear infinite;
-    transition: 0.5s;
+	position: fixed;
+	left: 100%;
+	bottom: 0%;
+	width: 10%;
+	height: 5vw;
+	background-image: url(./img/hedgehog.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	transform: scaleX(-1);
+	z-index: 2;
+	animation: hedgehog 15s infinite linear;
+	transition: 0.5s;
 }
 
 .hedgehog:hover {
+	width: 15%;
+	height: 7.5vw;
+}
 
-    width: 15%;
-    height: 7.5vw;
+.bat {
+	position: fixed;
+	left: 0;
+	top: 40%;
+	background-image: url(./img/bat.png);
+	width: 128px;
+	height: 314px;
+	z-index: 10;
+	overflow: hidden;
+	animation: bat 0.5s infinite steps(4), move 7.5s infinite linear alternate;
+}
+
+@keyframes bat {
+	0% {
+		background-position: 0 0;
+	}
+	100% {
+		background-position: -512px 0;
+	}
+}
+
+@keyframes move {
+	100% {
+		left: calc(100% - 128px);
+	}
 }
 
 @keyframes text {
-    0% {
-        transform: translate(100%, 0)
-    }
+	0% {
+		transform: translate(100%, 0);
+	}
 
-    3% {
-        transform: translate(100%, 0)
-    }
+	3% {
+		transform: translate(100%, 0);
+	}
 
-    6% {
-        transform: translate(0, 0);
-    }
+	6% {
+		transform: translate(0, 0);
+	}
 
-    48% {
-        transform: translate(0, 0);
-    }
+	48% {
+		transform: translate(0, 0);
+	}
 
-    50% {
-        transform: translate(-100%, 0);
-    }
+	50% {
+		transform: translate(-100%, 0);
+	}
 
-    100% {
-        transform: translate(-100%, 0);
-    }
-
+	100% {
+		transform: translate(-100%, 0);
+	}
 }
 
 @keyframes star {
+	40% {
+		opacity: 0;
+	}
 
+	40.5% {
+		opacity: 1;
+		transform: scale(-1) rotate(0);
+	}
 
-    40% {
-        opacity: 0;
-    }
+	41% {
+		opacity: 0;
+	}
 
-    40.5% {
-        opacity: 1;
-        transform: scale(-1) rotate(0);
-    }
+	41.5% {
+		opacity: 0.1;
+	}
 
-    41% {
-        opacity: 0;
-    }
+	42% {
+		opacity: 1;
+		transform: scale(1.2, 0.2) rotate(10deg);
+	}
 
-    41.5% {
-        opacity: 0.1;
-    }
+	42.5% {
+		opacity: 0;
+	}
 
-    42% {
+	43% {
+		opacity: 0.1;
+	}
 
-        opacity: 1;
-        transform: scale(1.2, 0.2) rotate(10deg);
-    }
+	43.5% {
+		opacity: 1;
+		transform: scale(0.2, 1.2) rotate(0);
+	}
 
-    42.5% {
-        opacity: 0;
-    }
+	44% {
+		opacity: 0;
+	}
 
-    43% {
-        opacity: 0.1;
-    }
+	44.5% {
+		opacity: 1;
+		transform: scale(1.2, 0.2) rotate(10deg);
+	}
 
-    43.5% {
+	45% {
+		opacity: 0;
+	}
 
-        opacity: 1;
-        transform: scale(0.2, 1.2) rotate(0);
-    }
+	45.5% {
+		opacity: 0.1;
+	}
 
-    44% {
-        opacity: 0;
-    }
+	46% {
+		opacity: 1;
+		transform: scale(0.2, 1.2) rotate(0);
+	}
 
-    44.5% {
+	46.5% {
+		opacity: 0;
+	}
 
-        opacity: 1;
-        transform: scale(1.2, 0.2) rotate(10deg);
-    }
+	47% {
+		opacity: 0;
+	}
 
-    45% {
-        opacity: 0;
-    }
+	47.5% {
+		opacity: 1;
+		transform: scale(-1) rotate(0);
+	}
 
-    45.5% {
-        opacity: 0.1;
-    }
+	48% {
+		opacity: 0;
+	}
 
-    46% {
-        opacity: 1;
-        transform: scale(0.2, 1.2) rotate(0);
-    }
+	48.5% {
+		opacity: 1;
+		transform: scale(1) rotate(0);
+	}
 
-    46.5% {
-        opacity: 0;
-    }
-
-    47% {
-        opacity: 0;
-    }
-
-    47.5% {
-
-        opacity: 1;
-        transform: scale(-1) rotate(0);
-    }
-
-    48% {
-        opacity: 0;
-    }
-
-    48.5% {
-        opacity: 1;
-        transform: scale(1) rotate(0);
-    }
-
-    55% {
-        transform: scale(-1) rotate(0);
-        opacity: 0;
-    }
-
+	55% {
+		transform: scale(-1) rotate(0);
+		opacity: 0;
+	}
 }
 
 @keyframes hedgehog {
-    0% {
-        left: 100%;
-    }
-
-    100% {
-        left: -100%;
-    }
+	0% {
+		left: 100%;
+	}
+	100% {
+		left: -50%;
+	}
 }
 
 @keyframes sky {
-    0% {
-        background-color: #ccc;
-    }
+	0% {
+		background-color: #ccc;
+	}
 
-    50% {
-        background-color: black;
-    }
+	50% {
+		background-color: black;
+	}
 
-    100% {
-        background-color: #ccc;
-    }
+	100% {
+		background-color: #ccc;
+	}
 }
 
 @keyframes moon {
-    0% {
-        bottom: 20%;
-        left: calc(0% - 20vh);
-    }
+	0% {
+		bottom: 20%;
+		left: calc(0% - 20vh);
+	}
 
-    48% {
-        bottom: 65%;
-    }
+	48% {
+		bottom: 65%;
+	}
 
-    50% {
-        box-shadow: -20px 12px 0px 5px rgb(50, 255, 21);
-    }
+	50% {
+		bottom: 66%;
+		box-shadow: -20px 12px 0px 5px rgb(50, 255, 21);
+	}
 
-    52% {
-        bottom: 65%;
-    }
+	52% {
+		bottom: 67%;
+	}
 
-    100% {
-        bottom: 20%;
-        left: 105%;
-    }
+	100% {
+		bottom: 20%;
+		left: 105%;
+	}
 }
